force-app/main/default/objects/Journey_Task__c/Journey_Task__c.object-meta.xml
<CustomObject>
    <description>Tasks for employee to complete.</description>
    <label>Journey Task</label>
    <nameField>
        <label>Task Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Journey Tasks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>