force-app/main/default/objects/Journey_Task__c/fields/Estimated_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Completion_Date__c</fullName>
    <formula>TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estimated Completion Date</label>
    <type>Date</type>
</CustomField>