force-app/main/default/objects/Journey_Task__c/fields/Journey__c.field-meta.xml
<CustomField>
    <fullName>Journey__c</fullName>
    <label>Journey</label>
    <referenceTo>Journey__c</referenceTo>
    <relationshipLabel>Journey Tasks</relationshipLabel>
    <relationshipName>Journey_Tasks</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>