force-app/main/default/objects/Journey_Task__c/fields/Journey_del__c.field-meta.xml
<CustomField>
    <fullName>Journey_del__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Journey</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Journey__c.OwnerId</field>
            <operation>equals</operation>
            <valueField>$User.Id</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Journey__c</referenceTo>
    <relationshipName>Tasks_del</relationshipName>
    <type>Lookup</type>
</CustomField>