force-app/main/default/objects/Journey_Task__c/validationRules/Negative_Number.validationRule-meta.xml
<ValidationRule>
    <fullName>Negative_Number</fullName>
    <active>true</active>
    <errorConditionFormula>Relative_Days_to_Complete__c  &lt; 0</errorConditionFormula>
    <errorDisplayField>Relative_Days_to_Complete__c</errorDisplayField>
    <errorMessage>Days to complete can not be in the past!</errorMessage>
</ValidationRule>